# Map

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  app.py  deprecated_utils.py  docker-compose.yml  main3.py  pyproject.toml  queries.py  schemas.py
.docker/nginx/: nginx.conf
.docker/postgres/: Dockerfile
configs/: .env.example  Database.py  Environment.py
errors/: errors.py  handlers.py
ml/core/: FilesPreprocessor.py  InferencePipelines.py  MapCreator.py  ResultCreator.py  YoloTracker.py
models/: BaseModel.py  archive.py  maps.py
repositories/: archive.py  maps.py
routing/v1/: archive.py  auth.py  exporter.py  maps.py  ml.py  static.py
schemas/: archive.py  exporter.py  map.py
services/: archive.py  exporter.py  maps.py
static/: app.js  archive.css  auth.css  auth.js  dashboard.css  footer.css  header.css  home.css  index.css  intersections.css  intersections.js  maps.css  maps.js  progressBar.css  space.css  space.js  style.css
templates/: archive.html  auth.html  dashboard.html  index.html  intersections.html  maps.html  space.html
utils/: constant.py  utils.py
